= What’s new
:toc: true
:toclevels: 1

:page-title: What's new
:page-pageid: whats-new
:page-description: New features and enhancements

This page lists new features, enhancements, and deprecated functionality in ThoughtSpot Embedded instances.

== Version 10.8.0.cl

=== Third-Party script integration

ThoughtSpot now allows integrating third-party script into embed. This feature is disabled by default on ThoughtSpot instances.

While you can inject custom Javascript into your embeds, you must consider the security risks and vulnerabilities associated with Cross-site scripting (XSS). Before contacting Support to enable this feature on your instance, assess the potential security risks to your application environment and review the relevant security guidelines. For more information, see xref:3rd-party-script.adoc[Integrate third-party tools and scripts].

== Version 10.6.0.cl

=== Spotter embed enhancements

Spotter is enabled on ThoughtSpot instances by default and is now generally available for embedding in your applications and chatbot.

This release also introduces several enhancements to Spotter embed:

* xref:embed-spotter.adoc#configControls[Configuration controls in the SDK] to disable or hide the data source, and show or hide sample questions
* xref:embed-spotter.adoc#SpotterCSS[Customization controls for CSS overrides], xref:embed-spotter.adoc#spotterMenuActions[action IDs] for menu customization on the Spotter page.
* Additional options in the xref:developer-playground.adoc#playground-spotter[Spotter Playground experience], which allow users to explore the customization settings available for Spotter.

For more information, see xref:embed-spotter.adoc[Embed Spotter].

=== Theme builder for ThoughtSpot interface customization [beta betaBackground]^Beta^