@@ -10,11 +10,12 @@ This page lists new features, enhancements, and deprecated functionality in Thou
 
 == Version 10.8.0.cl
 
-=== Third-Party script integration
+=== Third-Party tools and custom script integration
 
-ThoughtSpot now allows integrating third-party script into embed. This feature is disabled by default on ThoughtSpot instances.
+ThoughtSpot now allows integrating third-party tools and scripts into your embed. This feature is disabled by default on ThoughtSpot instances.
 
 While you can inject custom Javascript into your embeds, you must consider the security risks and vulnerabilities associated with Cross-site scripting (XSS). Before contacting Support to enable this feature on your instance, assess the potential security risks to your application environment and review the relevant security guidelines. For more information, see xref:3rd-party-script.adoc[Integrate third-party tools and scripts].
+
 
 == Version 10.6.0.cl
 
